--- a/extract_stats_Dec2019.Rmd
+++ b/extract_stats_Dec2019.Rmd
@@ -588,6 +588,163 @@ I think adding Argos data help this issue... To justify, we need to look at how 
 
 OR DO WE NEED TO DO THAT MUCH... 
 
+Look at the individual UDs against SSTs
+
+```{r}
+data1 <- read.csv(file = "data/IDvsUDs_SST.csv")
+data1 %>% dplyr::select(ArgosID, n.days.GPS, n.relocations.all.GPS, date.GPS, Capture_Date,
+                        Sex, Mass_kg, SCL_cm, period, area.50.all.GPS, area.95.all.GPS,
+                        tmp.lag7.mean, tmp.lag7.max, tmp.lag7.min, tmp.lag7.sd,
+                        tmp.lag14.mean, tmp.lag14.max, tmp.lag14.min, tmp.lag14.sd,
+                        tmp.deploy.mean, tmp.deploy.max, tmp.deploy.min, tmp.deploy.sd,
+                        tmp.middle.mean, tmp.middle.max, tmp.middle.min, tmp.middle.sd,
+                        month) %>%
+  na.omit() -> data1.2
+
+data2 <- data.frame(scale(select_if(data1.2, is.numeric)) )
+data2$sex <- data1.2$Sex
+data2$period <- data1.2$period
+```
+
+
+Use Random Forests to find useful variables - just throw in everything! Something is not working here. RF is giving nonsensical results - look into this! 1/16/2020
+
+```{r}
+library(party)
+M1 <- as.formula("area.50.all.GPS ~ n.days.GPS + Mass_kg + month +tmp.lag14.mean + tmp.lag14.min + tmp.lag14.max + tmp.lag14.sd + tmp.lag7.mean + tmp.lag7.min + tmp.lag7.max + tmp.lag7.sd + tmp.deploy.mean + tmp.deploy.min + tmp.deploy.max + tmp.deploy.sd + tmp.middle.mean + tmp.middle.min + tmp.middle.max + tmp.middle.sd")
+
+if (!file.exists("RData/RF_M1_out.rds")){
+  RF.M1 <- cforest(formula = M1,
+                   data = data2, 
+                   control = cforest_unbiased(ntree = 5000, trace = 500))
+  
+  saveRDS(RF.M1, file = "RData/RF_M1_out.rds")
+  
+} else {
+  RF.M1 <- readRDS("RData/RF_M_1_out.rds")
+}
+
+if (!file.exists("RData/RF_M1_varImp.rds")){
+  var.imp <- sort(varimp(RF.M1), decreasing = FALSE)
+  saveRDS(var.imp, file = "RData/RF_M1_varImp.rds")
+} else {
+  var.imp <- readRDS("RData/RF_M1_varImp.rds")
+}
+
+if (!file.exists("RData/RF_M1_predict.rds")){
+  pred.RF.M1 <- predict(RF.M1, newdata = NULL)
+  saveRDS(pred.RF.M1, file = "RData/RF_M1_predict.rds")
+} else {
+  pred.RF.M1 <- readRDS("RData/RF_M1_predict.rds")
+}
+
+var.imp.df <- data.frame(var.imp)
+var.imp.df$Variable <- rownames(var.imp.df)
+
+ggplot(data = var.imp.df) + 
+  geom_point(aes(x = var.imp, y = reorder(Variable, var.imp)),
+             size = 3) + 
+  theme_bw() + 
+  labs(x = "Variable importance") + 
+  theme(axis.title.y = element_blank(),
+        axis.title.x = element_text(size =12))
+
+RF.M1
+summary(RF.M1)
+```
+
+
+Then use GLM to look at how they affected the HR:
+
+Lag 14 days.
+```{r}
+
+fit.lag14.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag14.mean + tmp.lag14.min + tmp.lag14.max + tmp.lag14.sd + month,
+            data = data2)
+summary(fit.lag14.50)
+```
+
+lag 7
+```{r}
+fit.lag7.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag7.mean + tmp.lag7.min + tmp.lag7.max + tmp.lag7.sd + month,
+            data = data2)
+summary(fit.lag7.50)
+
+```
+
+entire deploy period
+```{r}
+fit.deploy.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.deploy.mean + tmp.deploy.min + tmp.deploy.max + tmp.deploy.sd + month,
+            data = data2)
+summary(fit.deploy.50)
+
+```
+
+middle of deployment
+```{r}
+fit.middle.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.middle.mean + tmp.middle.min + tmp.middle.max + tmp.middle.sd + month,
+            data = data2)
+summary(fit.middle.50)
+
+```
+
+drop some 
+```{r}
+fit.middle.50.2 <- lm(area.50.all.GPS ~ tmp.middle.mean + tmp.middle.min + tmp.middle.max + month,
+                      data = data2)
+summary(fit.middle.50.2)
+
+```
+
+But... they are very correlated so drop two and go with min
+
+```{r}
+fit.middle.50.3 <- lm(area.50.all.GPS ~ tmp.middle.min + month,
+            data = data2)
+summary(fit.middle.50.3)
+```
+
+But that doesn't work! 
+
+
+Just means only
+```{r}
+fit.means.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag7.mean + tmp.lag14.mean + tmp.deploy.mean + tmp.middle.mean + month,
+            data = data2)
+summary(fit.means.50)
+
+```
+
+
+Just minimum 
+```{r}
+fit.min.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag7.min + tmp.lag14.min + tmp.deploy.min + tmp.middle.min + month,
+            data = data2)
+summary(fit.min.50)
+```
+
+
+Just max
+```{r}
+fit.max.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag7.max + tmp.lag14.max + tmp.deploy.max + tmp.middle.max + month,
+            data = data2)
+summary(fit.max.50)
+```
+
+Just sd
+```{r}
+fit.sd.50 <- lm(area.50.all.GPS ~ n.days.GPS + Mass_kg + period + tmp.lag7.sd + tmp.lag14.sd + tmp.deploy.sd + tmp.middle.sd + month,
+            data = data2)
+summary(fit.sd.50)
+```
+
+```{r}
+fit.month.50 <- lm(area.50.all.GPS ~ month + SCL_cm,
+            data = data2)
+summary(fit.month.50)
+```
+
+
 Find overlap with eelgrass
 ```{r}
 SDBay <- readOGR(dsn = "GISfiles",
